# LLM-Dashboard

./: .gitattributes  .replit  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  replit.md  replit.nix
attached_assets/: DID_INTEGRATION_GUIDE_(1)_1777084864215.md  Pasted--AI-Model-Repositories-Databases-Beyond-Hugging-Face-He_1774103403265.txt  Pasted--Consider-restricting-pg-hba-conf-to-specific-IP-ranges_1773642718334.txt  (+9 more)
claw-code-agent/: pyproject.toml
claw-code-agent/benchmarks/: download_datasets.py
claw-code-agent/benchmarks/suites/: hle.py  ifeval.py  mbpp.py  mmlu_pro.py  swe_bench.py
claw-code-agent/src/: __init__.py  agent_runtime.py  agent_tools.py  agent_types.py  compact.py  config_runtime.py  execution_registry.py  history.py  openai_compat.py  plugin_runtime.py  prompt_constants.py  remote_runtime.py  runtime.py  search_runtime.py  session_store.py  task_runtime.py  tools.py  transcript.py  workflow_runtime.py  worktree_runtime.py
claw-code-agent/src/reference_data/: __init__.py  archive_surface_snapshot.json  commands_snapshot.json  tools_snapshot.json
claw-code-agent/tests/: test_agent_context_usage.py  test_agent_prompting.py  test_agent_tools_security.py  test_bash_security.py  test_benchmark_download_datasets.py  test_command_graph.py  test_compact.py  test_cost_tracker.py  test_extended_tools.py  test_main.py  test_mcp_runtime.py  test_openai_compat.py  test_porting_workspace.py  test_query_engine_runtime.py  test_remote_runtime.py  test_remote_trigger_runtime.py  test_session_store.py  test_terminal_bench_local.py
scripts/: run-e2e.sh  (+1 more)
(+306 files in other folders)
