[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claw-code-agent"
version = "0.1.0"
description = "No Rust. Easy to work with. Fast to iterate."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Claw Code Agent Contributors" }
]
keywords = [
  "agent",
  "cli",
  "coding-agent",
  "local-model",
  "python",
  "qwen",
  "vllm"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/HarnessLab/claw-code-agent"
Repository = "https://github.com/HarnessLab/claw-code-agent"

[project.scripts]
claw-code-agent = "src.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = [
  "reference_data/*.json",
]
